--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "exotwd#1000
   "license": "ISC",
   "dependencies": {
     "ascii-table": "0.0.9",
